corpus/case-expressions.txt
================================================================================
case expressions and pattern alternatives
================================================================================
module Stage06.Cases

single = case value of Just x => x
multiple = case value of Just x => x | _ => 0
literals = case n of 0 => 1 | _ => 2
parenthesized = case value of (Just x) => x | _ => 0
scrutinee = case f x + y of result => result + 1
nested = case outer of Just x => case x of 0 => 1 | _ => 2 | _ => 3
lambda = \x => case x of Just y => y | _ => 0
classify x = case x of Just y => f y | _ => 0
--------------------------------------------------------------------------------

(module
  (declaration
    (module_declaration
      (module_name
        (identifier)
        (identifier))))
  (declaration
    (function_definition
      (identifier)
      (expression
        (case_expression
          (expression
            (identifier))
          (case_alternative
            (constructor_application_pattern
              (identifier)
              (identifier))
            (expression
              (identifier)))))))
  (declaration
    (function_definition
      (identifier)
      (expression
        (case_expression
          (expression
            (identifier))
          (case_alternative
            (constructor_application_pattern
              (identifier)
              (identifier))
            (expression
              (identifier)))
          (case_alternative
            (pattern
              (hole))
            (expression
              (integer)))))))
  (declaration
    (function_definition
      (identifier)
      (expression
        (case_expression
          (expression
            (identifier))
          (case_alternative
            (pattern
              (integer))
            (expression
              (integer)))
          (case_alternative
            (pattern
              (hole))
            (expression
              (integer)))))))
  (declaration
    (function_definition
      (identifier)
      (expression
        (case_expression
          (expression
            (identifier))
          (case_alternative
            (pattern
              (parenthesized_pattern
                (constructor_application_pattern
                  (identifier)
                  (identifier))))
            (expression
              (identifier)))
          (case_alternative
            (pattern
              (hole))
            (expression
              (integer)))))))
  (declaration
    (function_definition
      (identifier)
      (expression
        (case_expression
          (expression
            (infix_expression
              (application
                (identifier)
                (identifier))
              (operator)
              (identifier)))
          (case_alternative
            (pattern
              (identifier))
            (expression
              (identifier)
              (operator)
              (integer)))))))
  (declaration
    (function_definition
      (identifier)
      (expression
        (case_expression
          (expression
            (identifier))
          (case_alternative
            (constructor_application_pattern
              (identifier)
              (identifier))
            (expression
              (case_expression
                (expression
                  (identifier))
                (case_alternative
                  (pattern
                    (integer))
                  (expression
                    (integer)))
                (case_alternative
                  (pattern
                    (hole))
                  (expression
                    (integer))))))
          (case_alternative
            (pattern
              (hole))
            (expression
              (integer)))))))
  (declaration
    (function_definition
      (identifier)
      (expression
        (lambda_expression
          (identifier)
          (expression
            (case_expression
              (expression
                (identifier))
              (case_alternative
                (constructor_application_pattern
                  (identifier)
                  (identifier))
                (expression
                  (identifier)))
              (case_alternative
                (pattern
                  (hole))
                (expression
                  (integer)))))))))
  (declaration
    (function_definition
      (identifier)
      (pattern
        (identifier))
      (expression
        (case_expression
          (expression
            (identifier))
          (case_alternative
            (constructor_application_pattern
              (identifier)
              (identifier))
            (expression
              (application
                (identifier)
                (identifier))))
          (case_alternative
            (pattern
              (hole))
            (expression
              (integer))))))))
