corpus/case-patterns.txt
================================================================================
case constructor patterns
================================================================================
module Stage07.CasePatterns

bare = case value of Nothing => 0 | Just x => x
applied = case value of Just x => x | Nothing => 0
nested = case value of Just x => case x of Nothing => 0 | Just y => y | _ => 1

--------------------------------------------------------------------------------

(module
  (declaration
    (module_declaration
      (module_name
        (identifier)
        (identifier))))
  (declaration
    (function_definition
      (identifier)
      (expression
        (case_expression
          (expression
            (identifier))
          (case_alternative
            (constructor_pattern
              (identifier))
            (expression
              (integer)))
          (case_alternative
            (constructor_application_pattern
              (identifier)
              (identifier))
            (expression
              (identifier)))))))
  (declaration
    (function_definition
      (identifier)
      (expression
        (case_expression
          (expression
            (identifier))
          (case_alternative
            (constructor_application_pattern
              (identifier)
              (identifier))
            (expression
              (identifier)))
          (case_alternative
            (constructor_pattern
              (identifier))
            (expression
              (integer)))))))
  (declaration
    (function_definition
      (identifier)
      (expression
        (case_expression
          (expression
            (identifier))
          (case_alternative
            (constructor_application_pattern
              (identifier)
              (identifier))
            (expression
              (case_expression
                (expression
                  (identifier))
                (case_alternative
                  (constructor_pattern
                    (identifier))
                  (expression
                    (integer)))
                (case_alternative
                  (constructor_application_pattern
                    (identifier)
                    (identifier))
                  (expression
                    (identifier))))))
          (case_alternative
            (pattern
              (hole))
            (expression
              (integer))))))))
