corpus/incomplete-with-clauses.txt
================================================================================
incomplete brace with clauses
================================================================================
module Stage10.IncompleteWith

missingClose n with (isZero n) { missingClose n | True = 1; missingClose n | False = 0

--------------------------------------------------------------------------------

(module
  (declaration
    (module_declaration
      name: (module_name
        (identifier)
        (identifier))))
  (declaration
    (with_declaration
      name: (identifier)
      parameter: (pattern
        (identifier))
      view: (parenthesized_expression
        (expression
          (application
            function: (identifier)
            argument: (identifier))))
      clause: (with_clause
        name: (identifier)
        refined_parameter: (pattern
          (identifier))
        view_pattern: (constructor_pattern
          (identifier))
        body: (expression
          (integer)))
      clause: (with_clause
        name: (identifier)
        refined_parameter: (pattern
          (identifier))
        view_pattern: (constructor_pattern
          (identifier))
        body: (expression
          (integer)))
      (MISSING _case_close))))
